--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
   ext {
-    springBootVersion = '1.3.3.RELEASE'
     springDepVersion = '0.6.0.RELEASE'
   }
   repositories {
@@ -8,27 +7,20 @@ buildscript {
   }
   dependencies {
     classpath "io.spring.gradle:dependency-management-plugin:${springDepVersion}"
-//    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
   }
 }
 
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 apply plugin: 'io.spring.dependency-management'
-//apply plugin: 'spring-boot'
 
 repositories {
   jcenter()
+  mavenCentral()
+  mavenLocal()
 }
 
 dependencyManagement {
-/*
-  imports {
-    mavenBom 'org.springframework:spring-framework-bom:4.2.5.RELEASE'
-    mavenBom 'org.springframework.security:spring-security-bom:4.0.3.RELEASE'
-    mavenBom 'org.springframework.data:spring-data-releasetrain:Gosling-SR1'
-  }
-*/
   dependencies {
     dependency ("org.codehaus.castor:castor:1.0.5"){
       exclude 'adaptx:adaptx:0.9.13'
